--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,1 +1,10 @@
-{ "name": "@kadoo/types", "version": "0.0.1", "type": "module", "main": "src/index.ts" }
+{
+  "name": "@kadoo/types",
+  "version": "0.0.1",
+  "private": true,
+  "type": "module",
+  "main": "src/index.ts",
+  "dependencies": {
+    "zod": "^3.23.8"
+  }
+}
