--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,20 +9,31 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.0",
     "@kadoo/config": "workspace:*",
+    "@kadoo/types": "workspace:*",
     "bullmq": "^5.61.0",
+    "clsx": "^2.1.1",
+    "imapflow": "^1.0.200",
     "ioredis": "^5.8.1",
+    "lucide-react": "^0.546.0",
     "mongodb": "^6.20.0",
     "next": "15.5.6",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.9",
     "openai": "^6.5.0",
+    "quill": "^2.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.6.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
