--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.0",
     "@kadoo/config": "workspace:*",
+    "@kadoo/server-utils": "workspace:*",
     "@kadoo/types": "workspace:*",
     "bullmq": "^5.61.0",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.6.0",
+    "swr": "^2.3.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
