--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@kadoo/types": "workspace:*",
     "date-fns": "^4.1.0",
+    "ical.js": "^2.2.1",
     "imapflow": "^1.0.200",
+    "luxon": "^3.7.2",
     "nodemailer": "^7.0.9",
-    "openai": "^6.5.0"
+    "openai": "^6.5.0",
+    "tsdav": "^2.1.5"
   },
   "devDependencies": {
     "@types/nodemailer": "^7.0.2"
