--- a/packages/server-utils/package.json
+++ b/packages/server-utils/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@kadoo/server-utils",
   "version": "1.0.0",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
-    "./secrets": "./dist/secrets.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./secrets": {
+      "types": "./dist/secrets.d.ts",
+      "import": "./dist/secrets.js"
+    }
   },
   "files": ["dist"],
-  "scripts": { "build": "tsc -p tsconfig.json" }
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  }
 }
