--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -10,6 +10,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@kadoo/config": "workspace:*",
+    "@kadoo/server-utils": "workspace:*",
     "@kadoo/types": "workspace:*",
     "date-fns": "^4.1.0",
     "ical.js": "^2.2.1",
