--- a/packages/server-utils/tsconfig.json
+++ b/packages/server-utils/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
     "rootDir": "src",
-    "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "bundler",   // <— change this
+    "outDir": "dist",
+    "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "declaration": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "strict": true
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
