--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@kadoo/types": "workspace:*",
     "bullmq": "^5.61.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "imapflow": "^1.0.200",
     "ioredis": "^5.8.1",
     "lucide-react": "^0.546.0",
